[package]
name = "aoc_2022"
version = "9.0.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
description = "Solver for Advent of Code 2022"
edition = "2021"

[profile.bench]
#debug = true # for profiling

[dependencies]
indicatif = "0.16"
rayon = "1.5.0"
regex = "1.4.2"
lazy_static = "1.4.0"
hashers = "1.0.1"
clap = { version = "4.0.29", features = ["derive", "env"] }

[dependencies.aoc_helpers]
git = "https://github.com/hulthe/aoc_boiler.git"

[dependencies.aoc_macro]
git = "https://github.com/hulthe/aoc_boiler.git"
